# ELIFANT-Event

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
JSON/: L2Settings.json  chSettings.json  compile_commands.json  settings.json  timeSettings.json
Manual/: Manual.md  cover.pxd
TODO/: 1_Memory_Management_Issues.md  2_Error_Handling_and_Exception_Safety.md  3_Thread_Safety_Issues.md  4_Resource_Management_RAII.md  5_Code_Organization_and_Architecture.md  6_Performance_Optimizations.md  7_Modern_CPP_Best_Practices.md  8_Specific_Code_Issues.md  9_Testing_and_Documentation.md  Complete_Implementation_Summary.md  Cross_File_Continuity.md  Implementation_Summary.md  README.md  Simple_Chunked_Input_Plan.md
dictionary/: LinkDef.h
docs/: L2Conditions_Analysis.md
include/: ChSettings.hpp  DELILAExceptions.hpp  EventBuilder.hpp  EventData.hpp  FileWriter.hpp  L1EventBuilder.hpp  L2Conditions.hpp  L2EventBuilder.hpp  TFileRAII.hpp  TimeAlignment.hpp
json-editor/: README.md  TAGS_USAGE.md  TESTING.md  package.json  test-types.js
json-editor/public/: index.html  input-debug.html
json-editor/src/: App.js  ArrayInput.js  InputTest.js
macro/: ReSorter.cpp  TimeChecker.cpp  read_calibration.cpp  reader.cpp  ring_ring.cpp  test.cpp
src/: EventBuilder.cpp  FileWriter.cpp  L1Event.cpp  L1EventBuilder.cpp  L2EventBuilder.cpp  TimeAlignment.cpp
tests/: CMakeLists.txt  README.md
tests/benchmarks/: CMakeLists.txt  bench_performance.cpp
tests/integration/: CMakeLists.txt  test_pipeline.cpp
tests/unit/: CMakeLists.txt  test_builders.cpp  test_ch_settings.cpp  test_event_data.cpp  test_exceptions.cpp  test_l2_conditions.cpp  test_l2_conditions_edge_cases.cpp  test_tfile_raii.cpp
